<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.herprogramacion.restaurantericoparico.ui.Registro"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="152dp"
        android:layout_height="83dp"
        android:src="@drawable/concepcion"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:gravity="center"
        android:id="@+id/eRUsuario"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:id="@+id/eRPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reppassword"
        android:inputType="textPassword"
        android:gravity="center"
        android:id="@+id/eRRepPassword"/>

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/correo"
        android:inputType="textAutoComplete|textEmailAddress|textEmailSubject" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0.23" />

    <Button
        android:id="@+id/bRegistarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registrarse" />

    <Button
        android:id="@+id/bCancelar"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/cancelar" />

</LinearLayout>
