<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.herprogramacion.restaurantericoparico.ui.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="263dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:src="@drawable/concepcion" />

    <EditText
        android:id="@+id/eUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/iniciarSes" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/tRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="@color/blue" />


</LinearLayout>
